--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,62 @@
-*.pyc
-*.~
-\#*
-.*~
-*.egg-info
-example/*/*.log
-example/*.db
-example/*/*.db
-tests/*.db
-tests/*.log
+# Created by .ignore support plugin (hsz.mobi)
+### Python template
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
 build/
+develop-eggs/
 dist/
-example/sp/identities
-test/oic_op/export
-subject.db
-.idea
-.project
-.pydevproject
-.DS_store
-debug_*
-*.log
-*.out
-tmp*
-*.tmp
-*.log.*
-*.db
-*egg-info*
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
 .coverage
-*.tmpl
-log/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+
